--- a/src/SourceMapDotNet.csproj
+++ b/src/SourceMapDotNet.csproj
@@ -48,7 +48,9 @@
     <Compile Include="Model\SourceMapFile.cs" />
     <Compile Include="Model\SourceReference.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SourceMapConsumer.cs" />
     <Compile Include="Util\Base64.cs" />
+    <Compile Include="Util\Comparers\SourceReferenceByLineEqualityComparer.cs" />
     <Compile Include="Util\VlqDecoder.cs" />
   </ItemGroup>
   <ItemGroup>
