--- a/tests/SourceMapDotNetTests.csproj
+++ b/tests/SourceMapDotNetTests.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\MappingSegmentTests.cs" />
+    <Compile Include="Model\SourceReferenceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -66,6 +68,7 @@
     </Compile>
     <Compile Include="SourceMapFileTests.cs" />
     <Compile Include="Util\Base64Tests.cs" />
+    <Compile Include="Util\Comparers\SourceReferenceEqualityComparerTests.cs" />
     <Compile Include="Util\VlqDecoderTests.cs" />
   </ItemGroup>
   <ItemGroup>
