--- a/src/.nuget/NuGet.targets
+++ b/src/.nuget/NuGet.targets
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+    <ItemGroup>
+      <OutputPackages Include="$(TargetDir)*.nupkg" />
+    </ItemGroup>
+  
     <PropertyGroup>
         <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">$(MSBuildProjectDirectory)\..\</SolutionDir>
 
@@ -76,6 +80,11 @@
             $(BuildDependsOn);
             BuildPackage;
         </BuildDependsOn>
+
+        <CleanDependsOn Condition="$(BuildPackage) == 'true'">
+            $(CleanDependsOn);
+            CleanPackages;
+        </CleanDependsOn>          
     </PropertyGroup>
 
     <Target Name="CheckPrerequisites">
@@ -89,6 +98,10 @@
         <MsBuild Targets="_DownloadNuGet" Projects="$(MSBuildThisFileFullPath)" Properties="Configuration=NOT_IMPORTANT;DownloadNuGetExe=$(DownloadNuGetExe)" />
     </Target>
 
+    <Target Name="CleanPackages">
+        <Delete Files="@(OutputPackages)"></Delete>
+    </Target>
+  
     <Target Name="_DownloadNuGet">
         <DownloadNuGet OutputFilename="$(NuGetExePath)" Condition=" '$(DownloadNuGetExe)' == 'true' AND !Exists('$(NuGetExePath)')" />
     </Target>
